--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <nav>
       <ul>
         <li><a href="#" routerLink="/">Home</a></li>
-        <li><a href="#" routerLink="/contact-us">Contact Us</a></li>
+        <li><a href="#" routerLink="/list">List</a></li>
       </ul>
     </nav>
   </div>
